# python-training-fundamentals

./: .gitignore  LICENSE  LICENSE-CONTENT  README.md  env.example  pyproject.toml
code/m00-setup-mentalidad/sesion-00.2/: README.md  main.py  pyproject.toml
code/m01-python-fundamentos/sesion-01/: README.md  main.py  pyproject.toml
code/m01-python-fundamentos/sesion-02/: README.md  main.py  pyproject.toml
code/m01-python-fundamentos/sesion-03/: README.md  main.py  pyproject.toml
code/m01-python-fundamentos/sesion-04/: README.md  main.py  pyproject.toml
code/m01-python-fundamentos/sesion-05/: README.md  main.py  pyproject.toml
code/m02-python-intermedio/sesion-06/: README.md  main.py  pyproject.toml  saludador.py
code/m02-python-intermedio/sesion-06/tienda/: __init__.py  clientes.py  productos.py
code/m02-python-intermedio/sesion-07/: README.md  catalogo.py  errores.py  main.py  pyproject.toml
code/m02-python-intermedio/sesion-08/: README.md  main.py  pyproject.toml
code/m02-python-intermedio/sesion-09/: README.md  main.py  pyproject.toml
code/m03-tipado-calidad/sesion-10/: README.md  main.py  pyproject.toml
code/m03-tipado-calidad/sesion-11/: README.md  main.py  pyproject.toml
code/m04-async-http-persistencia/sesion-12/: README.md  main.py  pyproject.toml
code/m04-async-http-persistencia/sesion-13/: README.md  main.py  pyproject.toml
code/m04-async-http-persistencia/sesion-14/: README.md  main.py  pyproject.toml
code/m04-async-http-persistencia/sesion-15/: README.md  main.py  pyproject.toml
code/m05-api-fastapi/sesion-16/: README.md  main.py  pyproject.toml
code/m05-api-fastapi/sesion-17/: README.md  main.py  pyproject.toml
code/m05-api-fastapi/sesion-18/: README.md  env.example  main.py  pyproject.toml
code/m06-herramientas-ingeniero/sesion-19/: .gitignore  README.md  main.py  pyproject.toml
code/m06-herramientas-ingeniero/sesion-20/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
code/m06-herramientas-ingeniero/sesion-21/: README.md  descuentos.py  mini_api.py  pyproject.toml
code/proyecto-integrador/: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
code/proyecto-integrador/data/: catalogo.json
code/proyecto-integrador/src/tiendapro/: __init__.py  catalogo.py  config.py  db.py  errores.py  integraciones.py  log.py  modelos.py  orm.py  presentacion.py  repositorio.py
code/proyecto-integrador/src/tiendapro/api/: __init__.py  app.py  dtos.py  rutas.py
code/proyecto-integrador/tests/: conftest.py
code/proyecto-integrador/tests/integration/: test_api_errores.py  test_api_productos.py
code/proyecto-integrador/tests/unit/: test_dtos.py  test_errores.py  test_modelos.py
docs/: 00-curriculum.md  01-setup.md
docs/modulos/00-setup-mentalidad/sesion-00.1-como-aprender-a-programar/: README.md  ejercicios.md  recursos.md
docs/modulos/00-setup-mentalidad/sesion-00.2-setup-entorno/: README.md  ejercicios.md  recursos.md
docs/modulos/01-python-fundamentos/sesion-01-variables-tipos/: README.md  ejercicios.md  recursos.md
docs/modulos/01-python-fundamentos/sesion-02-control-flujo/: README.md  ejercicios.md  recursos.md
docs/modulos/01-python-fundamentos/sesion-03-estructuras-datos/: README.md  ejercicios.md  recursos.md
docs/modulos/01-python-fundamentos/sesion-04-funciones/: README.md  ejercicios.md  recursos.md
docs/modulos/01-python-fundamentos/sesion-05-strings/: README.md  ejercicios.md  recursos.md
docs/modulos/02-python-intermedio/sesion-06-modulos-paquetes/: README.md  ejercicios.md  recursos.md
docs/modulos/02-python-intermedio/sesion-07-errores/: README.md  ejercicios.md  recursos.md
docs/modulos/02-python-intermedio/sesion-08-oop-dataclasses/: README.md  ejercicios.md  recursos.md
docs/modulos/02-python-intermedio/sesion-09-decoradores-generadores-context/: README.md  ejercicios.md  recursos.md
docs/modulos/03-tipado-calidad/sesion-10-type-hints-mypy/: README.md  ejercicios.md  recursos.md
docs/modulos/03-tipado-calidad/sesion-11-pydantic-ruff/: README.md  ejercicios.md  recursos.md
docs/modulos/04-async-http-persistencia/sesion-12-asyncio/: README.md  ejercicios.md  recursos.md
docs/modulos/04-async-http-persistencia/sesion-13-httpx-json/: README.md  ejercicios.md  recursos.md
docs/modulos/04-async-http-persistencia/sesion-14-sql-fundamentos/: README.md  ejercicios.md  recursos.md
docs/modulos/04-async-http-persistencia/sesion-15-sqlalchemy/: README.md  ejercicios.md  recursos.md
docs/modulos/05-api-fastapi/sesion-16-fastapi-fundamentos/: README.md  ejercicios.md  recursos.md
docs/modulos/05-api-fastapi/sesion-17-validacion-dtos/: README.md  ejercicios.md  recursos.md
docs/modulos/05-api-fastapi/sesion-18-config-logging/: README.md  ejercicios.md  recursos.md
docs/modulos/06-herramientas-ingeniero/sesion-19-git/: README.md  ejercicios.md  recursos.md
docs/modulos/06-herramientas-ingeniero/sesion-20-docker/: README.md  ejercicios.md  recursos.md
docs/modulos/06-herramientas-ingeniero/sesion-21-pytest/: README.md  ejercicios.md  recursos.md
