[project]
name = "tiendapro-lite"
version = "0.1.0"
description = "TiendaPro Lite — proyecto integrador del curso python-training-fundamentals. API REST de e-commerce que crece módulo a módulo."
authors = [{ name = "José Coca" }]
requires-python = ">=3.12"
license = { file = "../../LICENSE" }
readme = "README.md"
dependencies = []
