[project]
name = "tiendapro-lite"
version = "0.2.0"
description = "TiendaPro Lite — proyecto integrador del curso python-training-fundamentals. API REST de e-commerce que crece módulo a módulo."
authors = [{ name = "José Coca" }]
requires-python = ">=3.12"
license = { file = "../../LICENSE" }
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiendapro"]

[tool.uv]
package = true
