[project]
name = "tiendapro-lite"
version = "0.5.0"
description = "TiendaPro Lite — proyecto integrador del curso python-training-fundamentals. API REST de e-commerce que crece módulo a módulo."
authors = [{ name = "José Coca" }]
requires-python = ">=3.12"
license = { file = "../../LICENSE" }
readme = "README.md"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiendapro"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
plugins = ["pydantic.mypy"]
