[project]
name = "sesion-10"
version = "0.1.0"
description = "Demo de S10 — Type hints y mypy"
requires-python = ">=3.12"
dependencies = []

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
