[project]
name = "sesion-11"
version = "0.1.0"
description = "Demo de S11 — pydantic v2, ruff y pre-commit"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
plugins = ["pydantic.mypy"]
